// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileData TileData renders with tooltip 1`] = `
<div
  className="box relative"
>
  <div
    className="box xsDisplayBlock"
  >
    <div
      aria-label="This is a tooltip"
      className="box"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        aria-disabled={false}
        className="hideOutline tapTransition rounding4 accessibilityOutline fullWidth pointer"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="tile selected"
          style={
            Object {
              "backgroundColor": "#0081fe1A",
              "borderColor": "#0081fe",
            }
          }
        >
          <div
            className="Flex rowGap2 columnGap2 xsDirectionRow"
          >
            <div
              className="FlexItem"
            >
              <div
                className="Flex rowGap0 columnGap1 xsDirectionColumn"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
                    style={
                      Object {
                        "minHeight": 24,
                      }
                    }
                  >
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal"
                      >
                        Text Impressions
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="FlexItem"
                >
                  <div
                    className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
                  >
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Text fontSize400 defaultText alignStart breakWord fontWeightSemiBold"
                      >
                        1.23M
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TileData renders 1`] = `
<div
  className="box relative"
>
  <div
    aria-disabled={false}
    className="hideOutline tapTransition rounding4 accessibilityOutline fullWidth pointer"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="tile selected"
      style={
        Object {
          "backgroundColor": "#0081fe1A",
          "borderColor": "#0081fe",
        }
      }
    >
      <div
        className="Flex rowGap2 columnGap2 xsDirectionRow"
      >
        <div
          className="FlexItem"
        >
          <div
            className="Flex rowGap0 columnGap1 xsDirectionColumn"
          >
            <div
              className="FlexItem"
            >
              <div
                className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
                style={
                  Object {
                    "minHeight": 24,
                  }
                }
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal"
                  >
                    Text Impressions
                  </div>
                </div>
              </div>
            </div>
            <div
              className="FlexItem"
            >
              <div
                className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="Text fontSize400 defaultText alignStart breakWord fontWeightSemiBold"
                  >
                    1.23M
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
